--- a/views/public/terms.ejs
+++ b/views/public/terms.ejs
@@ -3,9 +3,9 @@
         <div class="col-md-12 step-block"></div>
 
         <div class="col-md-6">
-            <p><strong>TERMS AND CONDITIONS FOR USE</strong></p>
+            <!-- <p><strong>TERMS AND CONDITIONS FOR USE</strong></p> -->
 
-            <p>This agreement controls and regulates the conditions for use of this website, Trademarkers.com (the “Site”).</p>
+            <p>The following terms and conditions of use govern the relationship between you (the "User" of "Customer") and Trademarkers LLC, a limited liability corporation establish under the laws of the State of Florida.</p>
             <p>This agreement was last modified on Aug, 2014. Trademarkers.com reserves the right to update it terms and conditions periodically. Use of this site will act as express consent that the user has read and understood the latest terms of this agreement. You agree that the Site will not be liable to you or any third-party for any modification or discontinuance of the Site.</p>
         </div>
 
@@ -77,7 +77,10 @@
 
                 </li>
                 <li><h3>6</h3> <p>In spite of the efforts made by the “Company” the information delivered through the “Website” may contain typographical or data errors which will be rectified immediately upon detection. The “User” takes upon all responsibilities and risks for the use of the “Website” and for the information obtained therein.</p></li>
-                <li><h3>7</h3> <p>The “Company” and the “Attorney” take upon no responsibility in the event that a Trademark, Patent, Domain Name or Company Formation is not granted. The “User” accepts that any objection, opposition, or rejection, or any other situation that prevents the further processing of the registration request, is not the responsibility of the “Company” its directors, employees, and/or "Attorneys" and hereby waives any indemnification.</p></li>
+                <li><h3>7</h3> 
+                    <p>The “Company” and the “Attorney” take upon no responsibility in the event that a Trademark, Patent, Domain Name or Company Formation is not granted. The “User” accepts that any objection, opposition, or rejection, or any other situation that prevents the further processing of the registration request, is not the responsibility of the “Company” its directors, employees, and/or "Attorneys" and hereby waives any indemnification.
+                    You agree that under any circumstances, the liability if Trademarkers shall be limited to the amount of the service fee paid by you to us.</p>
+                </li>
                 <li><h3>8</h3> <p>All the actions taken by the “Company” and the “Attorney” will be performed according to the information delivered by the “User.” To such effect, the “Company” and the “Attorney” will not accept any responsibility if such information infringes any third party rights or contains errors and/or omissions. The “User” is absolutely responsible for the data delivered in any "Service Request" available on the “Website,” whether recommended or not by the “Company.”</p></li>
                 <li><h3>9</h3> <p>The “Company” neither represents nor controls other web sites that can be accessed through the “Website”, and consequently, has no responsibility for the content, use, products, and services that may be available in those other web sites.</p></li>
                 <li><h3>10</h3> <p>The surveillance service and the search service for Trademarks and Domain Names may contain errors and/or omissions derived from the information available in the data banks, whether proprietary or not, of the “Trademarks Offices” or the “Registration Administration” which may themselves contain errors and/or omissions. The “User” releases the “Company” and its “Attorneys” of any such responsibility, waiving any claim for indemnification due to error, incomplete information, or in respect of recommendations and propositions made by the "Company" according to this information.</p></li>
