--- a/views/public/terms.ejs
+++ b/views/public/terms.ejs
@@ -5,7 +5,7 @@
         <div class="col-md-6">
             <!-- <p><strong>TERMS AND CONDITIONS FOR USE</strong></p> -->
 
-            <p>The following terms and conditions of use govern the relationship between you (the "User" of "Customer") and Trademarkers LLC, a limited liability corporation establish under the laws of the State of Florida.</p>
+            <p>The following terms and conditions of use govern the relationship between you (the "User" of "Customer") and Trademarkers LLC, a limited liability corporation established under the laws of the State of Florida.</p>
             <p>This agreement was last modified on Aug, 2014. Trademarkers.com reserves the right to update it terms and conditions periodically. Use of this site will act as express consent that the user has read and understood the latest terms of this agreement. You agree that the Site will not be liable to you or any third-party for any modification or discontinuance of the Site.</p>
         </div>
 
