--- a/views/layouts/public-layout-assignment.ejs
+++ b/views/layouts/public-layout-assignment.ejs
@@ -600,7 +600,7 @@
         }
       });
       $.ajax({
-        url: 'http://www.trademarkers.com/tmreg/88823262.us',
+        url: 'https://www.trademarkers.com/tmreg/88823262.us',
         type: 'GET'
       })
       .done(function(msg) {
