--- a/views/layouts/public-layout-interactive.ejs
+++ b/views/layouts/public-layout-interactive.ejs
@@ -100,40 +100,54 @@ $( document ).ready(function() {
       return false;
   });
 
-  var shipmentOptInput = $('.crt-fct-opt > .fieldset > input[type="radio"]');
-  // var fedexShipmentOptInput = $('.crt-fct-opt-fedex > .fieldset > input[type="checkbox"]');
+  var shipmentOptions = $('.crt-fct-opt input[type="checkbox"]');
 
-  $(shipmentOptInput).change(function(){
-    if(this.checked != true){
-      $(this).parent('.fieldset').parent('.crt-fct-opt').removeClass('crt-fct-opt-active');
-      return false;
-    }
-    else{
-      $(this).parent('.fieldset').parent('.crt-fct-opt').addClass('crt-fct-opt-active');
-        return true;
-    }
-  });
+      var shipmentOptInput = $('.crt-fct-opt-rgemail input[type="checkbox"]');
+      var fedexShipmentOptInput = $('.crt-fct-opt-fedex input[type="checkbox"]');
 
-  $('#CertificateDeliverySelection').click(function(){
-    if(shipmentOptInput.prop("checked") == true){
-      // SELECTED FEDEX
-      $('.cc-section-on-call').removeClass("cc-section-on-call-active");
-      $('html, body').animate({scrollTop: "0"}, 1000);
-      return false;
+      var shipmentEmail = $('.crt-fct-opt-rgemail #ShipmentEmail');
+      var shipmentAddress = $('.crt-fct-opt-fedex #ShipmentAddress');
 
-    }  
-    else{
-      // $('.cc-section-on-call').addClass("cc-section-on-call-active");
-      // $('html, body').animate({scrollTop: "900"}, 1000);
-      // setTimeout(function(){
-      //     $('.cc-form-self #name').focus();
+      $(shipmentOptions).change(function(){
+        if(this.checked != true){
+          $(this).parent('.opt-head').parent('.crt-fct-opt').removeClass('crt-fct-opt-active');
+          return false;
+        }
+        else{
+          $('.crt-fct-opt').removeClass('crt-fct-opt-active');
+          $('.crt-fct-opt input[type="checkbox"]').prop("checked", false);
+          $(this).prop("checked", true);
+          $(this).parent('.opt-head').parent('.crt-fct-opt').addClass('crt-fct-opt-active');
+          return true;
+        }
+      });
 
-      // }, 100);
-      // return true;
-      let trdid = $(this).attr('data-trdid');
-      $(location).attr('href', '/delivery-method/'+trdid+'/regular')
-    }
-  });
+      $('.crt-fct-opt-rgemail .btn-chng-info').click(function(){
+        $(this).prop('disabled', true);
+        $('.crt-fct-opt-rgemail').addClass('addr-change-active');
+      });
+
+      $('.crt-fct-opt-fedex .btn-chng-info').click(function(){
+        $(this).prop('disabled', true);
+        $('.crt-fct-opt-fedex').addClass('addr-change-active');
+      });
+
+      $('#CertificateDeliverySelection').click(function(){
+           if(fedexShipmentOptInput.prop("checked") != true){
+            $('.cc-section-on-call').removeClass("cc-section-on-call-active");
+            $('html, body').animate({scrollTop: "0"}, 1000);
+            return false;
+           }  
+           else{
+            $('.cc-section-on-call').addClass("cc-section-on-call-active");
+            $('html, body').animate({scrollTop: "900"}, 1000);
+            setTimeout(function(){
+                $('.cc-form-self #name').focus();
+
+            }, 100);
+            return true;
+           }
+      });
 
   
 
