--- a/views/partials/customer_header.ejs
+++ b/views/partials/customer_header.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse" style="margin-bottom:50px">
     <div class="    container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/researcher">Trademarkers</a>
+            <a class="navbar-brand" href="/">Trademarkers</a>
         </div>
 
         <ul class="nav navbar-nav navbar-right">
