--- a/views/customer/index.ejs
+++ b/views/customer/index.ejs
@@ -1,4 +1,9 @@
 <div class="col-md-12" style="margin-bottom:20px;">    
+    <% if(user) { %>
     <h2>My Dashboard</h2>
+    <h3><%= user.name %></h3>
+    <% } else { %>
+        <h2>My Dashboard</h2>
+    <% } %>
 </div>
                     
