--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -31,7 +31,7 @@
                             <img src="/images/countries/em.png">European Union
                         </a> 
                         <a href="/trademark-registration-in-china" class="dropdown-item">
-                            <img src="http://trademarkers.staging.test/images/countries/cn.png">China
+                            <img src="/images/countries/cn.png">China
                         </a> 
                         <a href="/trademark-registration-in-canada" class="dropdown-item">
                             <img src="/images/countries/ca.png">Canada
@@ -120,7 +120,34 @@
     </div>
 </div>  -->
 <ul class="header-nav">
-    <li class="nav-item">
-        <a href="/login" class="nav-link">Login</a>
+
+
+    <li class="">
+        <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i> </a>
     </li>
+
+    <% if(user) { %>
+    <li class="dropdown">
+        <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
+            <%= user.name %>
+            <span class="caret"></span>
+        </a>
+
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+
+            <a class="dropdown-item" href="/customer/">
+                My Account
+            </a>
+
+            <a class="dropdown-item" href="/login/expired">
+                Logout
+            </a>
+      
+        </div>
+    </li>
+    <% } else { %>
+        <li class="nav-item">
+            <a href="/login" class="nav-link">Login</a>
+        </li>
+    <% } %>
 </ul>
