--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,7 +14,7 @@
 
             <div class="col-md-5">
             <p class="text-center">
-                <a href="/contact">Contact</a> 
+                <!-- <a href="/contact">Contact</a>  -->
                 <a href="/prices">Pricing</a> 
                 <a href="/privacy">Privacy</a> 
                 <a href="/services">Services</a> 
