--- a/views/partials/researcher_footer.ejs
+++ b/views/partials/researcher_footer.ejs
@@ -1,6 +1,6 @@
 <footer class="container-fluid">
     <p>
-        <i class="fas fa-copyright"></i> 2020 Trademarkers LLC.
+        <i class="fas fa-copyright"></i> <%= moment().format('Y') %> Trademarkers LLC.
     </p>
 </footer>
 
