--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -18,7 +18,7 @@
 					<td><%= data.serviceType %></td>
 					<td><%= data.type %></td>
 					<td><%= data.word_mark %></td>
-					<td><%= data.class.join(',') %></td>
+					<td><%= data.class %></td>
 					<td>$<%= amount %></td>
 				</tr>
 			</table>
