--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -29,6 +29,7 @@
 			<form id="addToCart" method="POST" action="/add-to-cart">
 				<div class="form-group row">
 					<div class="col-md-12 text-center">
+						<input class="" type="hidden" name="logoName" value="<%= data.logoName %>">
 						<input class="" type="hidden" name="countryId" value="<%= data.countryId %>">
 						<input class="" type="hidden" name="serviceType" value="<%= data.serviceType %>">
 						<input class="" type="hidden" name="type" value="<%= data.type %>">
