--- a/views/order/registration.ejs
+++ b/views/order/registration.ejs
@@ -68,15 +68,15 @@
 					</div>
 				</div>
 
-				<div class="form-group row" id="upload">
+				<div class="form-group row" id="upload" style="display:none">
 				
 					<div class="col-md-12">
 						<div class="form-box">
 						<div class="form-check">
 							<label class="form-box-container" for="logo_pic"><b>Upload Photo (jpeg, jpg, png)</b></label>
 							<input type="file" class="file-input" name="logo_pic" class="form-control" id="logo_pic" >
-							<p id="logo_pic_name"></p>
-							<p id="logo_pic_btn" class="btn btn-primary btn-rounded-primary-light" >Upload A File</p>
+							<!-- <p id="logo_pic_name"></p>
+							<p id="logo_pic_btn" class="btn btn-primary btn-rounded-primary-light" >Upload A File</p> -->
 						</div>
 					
 						<div class="form-check" style="padding-top:20px">
@@ -84,13 +84,13 @@
 							
 
 							<div class="form-check">
-								<input class="form-check-input" type="radio" name="color_claim" id="yesClaim" value="yes" checked>
+								<input class="form-check-input" type="radio" name="color_claim" id="yesClaim" value="yes" >
 								<label class="form-check-label" for="yesClaim">
 									Yes
 								</label>
 							</div>
 							<div class="form-check">
-								<input class="form-check-input" type="radio" name="color_claim" id="noClaim" value="no">
+								<input class="form-check-input" type="radio" name="color_claim" id="noClaim" value="no" checked>
 								<label class="form-check-label" for="noClaim">
 									No
 								</label>
