--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -37,15 +37,15 @@
                             <img src="/images/countries/ca.png">Canada
                         </a> 
                         <hr> 
-                        <a href="/countries" class="dropdown-item"> All Countries</a> 
-                        <a href="/region/AF" class="dropdown-item">Africa</a> 
-                        <a href="/region/AS" class="dropdown-item">Asia</a> 
-                        <a href="/region/CA" class="dropdown-item">Central America</a> 
-                        <a href="/region/EU" class="dropdown-item">Europe</a>
-                        <a href="/region/ME" class="dropdown-item">Middle East</a> 
-                        <a href="/region/NA" class="dropdown-item">North America</a> 
-                        <a href="/region/OC" class="dropdown-item">Oceania</a> 
-                        <a href="/region/SA" class="dropdown-item">South America</a>
+                        <a href="https://trademarkers.com/countries" class="dropdown-item"> All Countries</a> 
+                        <a href="https://trademarkers.com/region/AF" class="dropdown-item">Africa</a> 
+                        <a href="https://trademarkers.com/region/AS" class="dropdown-item">Asia</a> 
+                        <a href="https://trademarkers.com/region/CA" class="dropdown-item">Central America</a> 
+                        <a href="https://trademarkers.com/region/EU" class="dropdown-item">Europe</a>
+                        <a href="https://trademarkers.com/region/ME" class="dropdown-item">Middle East</a> 
+                        <a href="https://trademarkers.com/region/NA" class="dropdown-item">North America</a> 
+                        <a href="https://trademarkers.com/region/OC" class="dropdown-item">Oceania</a> 
+                        <a href="https://trademarkers.com/region/SA" class="dropdown-item">South America</a>
                     </div>
                 </div>
             </li> 
