--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -123,7 +123,7 @@
 
     <% if(typeof user !== 'undefined' ) { %>
     <li class="">
-        <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i> </a>
+        <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i> <span id="shopping-cart"></span></a>
     </li>
     <li class="dropdown">
         <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
