--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -201,3 +201,21 @@
         }
     }
 }
+
+.guest-form{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+
+    label{
+        font-weight: 600;
+    }
+
+    .box-form{
+        display: block;
+        margin: 15px;
+        border: 4px solid #569af7;
+        padding: 20px 40px;
+        border-radius: 8px;
+    }
+}
