--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -50,8 +50,8 @@
 
 			<% } else { %>
 			<form id="addToCart" method="POST" action="/add-to-cart">
-				<div class="form-group row">
-					<div class="col-md-4 text-center">
+				<div class="form-group guest-form">
+					<div class="col-6 text-center">
 						<input class="" type="hidden" name="action" value="notLogin">
 						<input class="" type="hidden" name="logoName" value="<%= data.logoName %>">
 						<input class="" type="hidden" name="countryId" value="<%= data.countryId %>">
@@ -68,13 +68,9 @@
 						<% } %>
 
 						<div class="col-12">
-							<div class="form-group">
+							<div class="form-group row box-form">
 								<label for="NcEmail">Customer Information:</label>
-								<div class="row">
-									<div class="col-6">
-										<div class="form-field-inner" ></div>
-									</div>
-								</div>
+				
 								<div class="form-field mt-2">
 									<input 
 										type="text" 
